# Copyright 2020 Google LLC.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains overrides for Chromium-specific GN arguments that are used by some of Skia's
# third-party dependencies (e.g. Dawn).

build_with_chromium = false
build_with_angle = false
