# Copyright 2019 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# These are variables that are overridable by projects that include Dawn.

# Skia doesn't have Chromium's //build directory. Tell Dawn to do without.
dawn_has_build = false

dawn_abseil_dir = "//third_party/externals/abseil-cpp"
dawn_jinja2_dir = "//third_party/externals/jinja2"
dawn_spirv_tools_dir = "//third_party/externals/spirv-tools"
dawn_spirv_cross_dir = "//third_party/externals/spirv-cross"
dawn_tint_dir = "//third_party/externals/tint"
