# Copyright 2019 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# These are variables that are overridable by projects that include Dawn.

# Skia doesn't have Chromium's //build directory. Tell Dawn to do without.
dawn_has_build = false

dawn_abseil_dir = "//third_party/externals/abseil-cpp"
dawn_angle_dir = "//third_party/externals/angle2"
dawn_egl_registry_dir = "//third_party/externals/egl-registry"
dawn_jinja2_dir = "//third_party/externals/jinja2"
dawn_opengl_registry_dir = "//third_party/externals/opengl-registry"
dawn_spirv_tools_dir = "//third_party/externals/spirv-tools"
dawn_tint_dir = "//third_party/externals/tint"
dawn_vulkan_headers_dir = "//third_party/externals/vulkan-headers"
dawn_vulkan_tools_dir = "//third_party/externals/vulkan-tools"
dawn_vulkan_utility_libraries_dir =
    "//third_party/externals/vulkan-utility-libraries"
